// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should call default props onMenuToggle function when no onMenuToggle property is passed 1`] = `
.c4 {
  text-align: center;
}

.c7 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c9 {
  font-size: 1.5em;
}

.c5 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  margin-left: 1rem;
  opacity: 1;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
  margin-left: 0.5em;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
>
  <button
    className="c1 c2"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="c3 c4 lni lni-close"
    />
  </button>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#home"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-home"
            />
            <span
              className="c10 menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#users"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-users"
            />
            <span
              className="c10 menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#devices"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-rocket"
            />
            <span
              className="c10 menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#costs"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-briefcase"
            />
            <span
              className="c10 menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should have menu toggle event listener 1`] = `
.c4 {
  text-align: center;
}

.c7 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c9 {
  font-size: 1.5em;
}

.c5 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  margin-left: 1rem;
  opacity: 1;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
  margin-left: 0.5em;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
>
  <button
    className="c1 c2"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="c3 c4 lni lni-close"
    />
  </button>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#home"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-home"
            />
            <span
              className="c10 menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#users"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-users"
            />
            <span
              className="c10 menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#devices"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-rocket"
            />
            <span
              className="c10 menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#costs"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-briefcase"
            />
            <span
              className="c10 menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should render 1`] = `
.c4 {
  text-align: center;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
  margin-left: 0.5em;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
>
  <button
    className="c1 c2"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="c3 c4 lni lni-close"
    />
  </button>
  
</nav>
`;

exports[`Navigation should render children menu 1`] = `
.c4 {
  text-align: center;
}

.c7 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c9 {
  font-size: 1.5em;
}

.c5 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  margin-left: 1rem;
  opacity: 1;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
  margin-left: 0.5em;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
>
  <button
    className="c1 c2"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="c3 c4 lni lni-close"
    />
  </button>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#home"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-home"
            />
            <span
              className="c10 menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#users"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-users"
            />
            <span
              className="c10 menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#devices"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-rocket"
            />
            <span
              className="c10 menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#costs"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-briefcase"
            />
            <span
              className="c10 menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should render children menu closed when given appropriate property 1`] = `
.c4 {
  text-align: center;
}

.c7 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c9 {
  font-size: 1.5em;
}

.c5 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c6 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  margin-left: 1rem;
  opacity: 1;
}

.c2 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c0 {
  z-index: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 3rem;
  height: 3.5em;
  cursor: pointer;
  border: none;
  margin-left: 0.5em;
}

.c3 {
  font-size: 2rem;
  margin: 0.5rem;
}

<nav
  className="c0"
>
  <button
    className="c1 c2"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="c3 c4 lni lni-menu"
    />
  </button>
  <ul
    className="c5"
  >
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#home"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-home"
            />
            <span
              className="c10 menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#users"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-users"
            />
            <span
              className="c10 menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#devices"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-rocket"
            />
            <span
              className="c10 menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="c6"
    >
      <div
        className="c7"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#costs"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c4 lni lni-briefcase"
            />
            <span
              className="c10 menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;
